force-app/main/default/objects/Fundraising_Subledger_Setting__mdt/Fundraising_Subledger_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Global settings for the fundraising subledger</description>
    <label>Fundraising Subledger Setting</label>
    <pluralLabel>Fundraising Subledger Settings</pluralLabel>
</CustomObject>