force-app/main/default/objects/Fundraising_Subledger_Setting__mdt/fields/Accounting_Period_Open_Status__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Period_Open_Status__c</fullName>
    <description>The status value that represents an open accounting period. Must match the value in the picklist exactly.</description>
    <inlineHelpText>The status value that represents an open accounting period. Must match the value in the picklist exactly.</inlineHelpText>
    <label>Accounting Period Open Status</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>