force-app/main/default/objects/Fundraising_Subledger_Setting__mdt/fields/Default_Journal_Entry_Posting_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Journal_Entry_Posting_Status__c</fullName>
    <label>Default Journal Entry Posting Status</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>