force-app/main/default/objects/Fundraising_Subledger_Setting__mdt/fields/Default_Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Account__c</fullName>
    <label>Default Payment Account</label>
    <referenceTo>Global_GL_Account__mdt</referenceTo>
    <relationshipLabel>Fundraising Subledger Settings (Default Payment Account)</relationshipLabel>
    <relationshipName>Payment_Account_References</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>