force-app/main/default/objects/Fundraising_Subledger_Setting__mdt/fields/Default_Payment_GL_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_GL_Account_Name__c</fullName>
    <label>Default Payment GL Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>