force-app/main/default/objects/Fundraising_Subledger_Setting__mdt/fields/Default_Receivables_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_Receivables_Account__c</fullName>
    <label>Default Receivables Account</label>
    <referenceTo>Global_GL_Account__mdt</referenceTo>
    <relationshipLabel>Fundraising Subledger Settings (Default Receivables Account)</relationshipLabel>
    <relationshipName>Receivables_Account_References</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>