force-app/main/default/objects/Fundraising_Subledger_Setting__mdt/fields/DEL_Accounting_Period_Object__c.field-meta.xml
<CustomField>
    <fullName>DEL_Accounting_Period_Object__c</fullName>
    <description>The sObject that represents an accounting period</description>
    <inlineHelpText>The sObject that represents an accounting period</inlineHelpText>
    <label>DEL Accounting Period Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Fundraising_Subledger_Settings</relationshipLabel>
    <relationshipName>Fundraising_Subledger_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>