force-app/main/default/objects/Fundraising_Subledger_Setting__mdt/fields/DEL_Receivables_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>DEL_Receivables_GL_Account__c</fullName>
    <label>DEL Receivables GL Account</label>
    <referenceTo>Global_GL_Account__mdt</referenceTo>
    <relationshipLabel>DEL Fundraising Subledger Settings</relationshipLabel>
    <relationshipName>DEL_Fundraising_Subledger_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>